src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_fix(value self);
value atg_fix_(value self);
value atg_fix_out(value out, value self);
value atg_flatten(value self, int64_t start_dim, int64_t end_dim);
value atg_flatten_dense_tensors(value tensors);
value atg_flip(value self, value dims);
value atg_flip_out(value out, value self, value dims);
value atg_fliplr(value self);
value atg_flipud(value self);
value atg_float_power(value self, value exponent);
value atg_float_power_(value self, value exponent);
value atg_float_power_scalar(value self, value exponent);
value atg_float_power_scalar_out(value out, value self, value exponent);
value atg_float_power_tensor_(value self, value exponent);
value atg_float_power_tensor_scalar(value self, value exponent);
value atg_float_power_tensor_scalar_out(value out, value self, value exponent);
value atg_float_power_tensor_tensor_out(value out, value self, value exponent);
value atg_floor(value self);
value atg_floor_(value self);
value atg_floor_divide(value self, value other);
value atg_floor_divide_(value self, value other);
value atg_floor_divide_out(value out, value self, value other);
value atg_floor_divide_scalar(value self, value other);
value atg_floor_divide_scalar_(value self, value other);
value atg_floor_divide_scalar_out(value out, value self, value other);
value atg_floor_out(value out, value self);
value atg_fmax(value self, value other);
value atg_fmax_out(value out, value self, value other);
value atg_fmin(value self, value other);
value atg_fmin_out(value out, value self, value other);
value atg_fmod(value self, value other);
value atg_fmod_(value self, value other);
value atg_fmod_scalar_out(value out, value self, value other);
value atg_fmod_tensor(value self, value other);
value atg_fmod_tensor_(value self, value other);
value atg_fmod_tensor_out(value out, value self, value other);
value atg_frac(value self);
value atg_frac_(value self);
value atg_frac_out(value out, value self);
value atg_fractional_max_pool2d(value self, value kernel_size, value output_size, value random_samples);
value atg_fractional_max_pool2d_backward(value grad_output, value self, value kernel_size, value output_size, value indices);
value atg_fractional_max_pool2d_backward_grad_input(value grad_input, value grad_output, value self, value kernel_size, value output_size, value indices);
value atg_fractional_max_pool2d_output(value output, value indices, value self, value kernel_size, value output_size, value random_samples);
value atg_fractional_max_pool3d(value self, value kernel_size, value output_size, value random_samples);
value atg_fractional_max_pool3d_backward(value grad_output, value self, value kernel_size, value output_size, value indices);
value atg_fractional_max_pool3d_backward_grad_input(value grad_input, value grad_output, value self, value kernel_size, value output_size, value indices);
value atg_fractional_max_pool3d_output(value output, value indices, value self, value kernel_size, value output_size, value random_samples);
value atg_frexp(value self);
value atg_frexp_tensor_out(value mantissa, value exponent, value self);
value atg_frobenius_norm(value self, value dim, int keepdim);
value atg_frobenius_norm_out(value out, value self, value dim, int keepdim);
value atg_from_file(const char * filename, int shared, value size, int options_kind, int options_device);
value atg_from_file_out(value out, const char * filename, int shared, value size);
value atg_full(value size, value fill_value, int options_kind, int options_device);
value atg_full_like(value self, value fill_value);
value atg_full_like_out(value out, value self, value fill_value);
value atg_full_out(value out, value size, value fill_value);
value atg_fused_moving_avg_obs_fake_quant(value self, value observer_on, value fake_quant_on, value running_min, value running_max, value scale, value zero_point, double averaging_const, int64_t quant_min, int64_t quant_max, int64_t ch_axis, int per_row_fake_quant, int symmetric_quant);
value atg_gather(value self, int64_t dim, value index, int sparse_grad);
value atg_gather_backward(value grad, value self, int64_t dim, value index, int sparse_grad);
value atg_gather_out(value out, value self, int64_t dim, value index, int sparse_grad);
value atg_gcd(value self, value other);
value atg_gcd_(value self, value other);
value atg_gcd_out(value out, value self, value other);
value atg_ge(value self, value other);
value atg_ge_(value self, value other);
value atg_ge_scalar_out(value out, value self, value other);
value atg_ge_tensor(value self, value other);
value atg_ge_tensor_(value self, value other);
value atg_ge_tensor_out(value out, value self, value other);
value atg_gelu(value self, const char * approximate);
value atg_gelu_(value self, const char * approximate);
value atg_gelu_backward(value grad_output, value self, const char * approximate);
value atg_gelu_backward_grad_input(value grad_input, value grad_output, value self, const char * approximate);
value atg_gelu_out(value out, value self, const char * approximate);
value atg_geometric(value self, double p);
value atg_geometric_(value self, double p);
value atg_geometric_out(value out, value self, double p);
value atg_geqrf(value self);
value atg_geqrf_a(value a, value tau, value self);
value atg_ger(value self, value vec2);
value atg_ger_out(value out, value self, value vec2);
value atg_glu(value self, int64_t dim);
value atg_glu_backward(value grad_output, value self, int64_t dim);
value atg_glu_backward_grad_input(value grad_input, value grad_output, value self, int64_t dim);