src/bindings/torch_bindings_generated3.ml


  let stubs_fix = foreign "atg_fix" (gc_tensor @-> returning raw_tensor)
  let stubs_fix_ = foreign "atg_fix_" (gc_tensor @-> returning raw_tensor)

  let stubs_fix_out =
    foreign "atg_fix_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_flatten =
    foreign "atg_flatten" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_flatten_dense_tensors =
    foreign "atg_flatten_dense_tensors" (ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_flip =
    foreign "atg_flip" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_flip_out =
    foreign
      "atg_flip_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_fliplr = foreign "atg_fliplr" (gc_tensor @-> returning raw_tensor)
  let stubs_flipud = foreign "atg_flipud" (gc_tensor @-> returning raw_tensor)

  let stubs_float_power =
    foreign "atg_float_power" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_float_power_ =
    foreign "atg_float_power_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_float_power_scalar =
    foreign "atg_float_power_scalar" (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_float_power_scalar_out =
    foreign
      "atg_float_power_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_float_power_tensor_ =
    foreign "atg_float_power_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_float_power_tensor_scalar =
    foreign "atg_float_power_tensor_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_float_power_tensor_scalar_out =
    foreign
      "atg_float_power_tensor_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_float_power_tensor_tensor_out =
    foreign
      "atg_float_power_tensor_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_floor = foreign "atg_floor" (gc_tensor @-> returning raw_tensor)
  let stubs_floor_ = foreign "atg_floor_" (gc_tensor @-> returning raw_tensor)

  let stubs_floor_divide =
    foreign "atg_floor_divide" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_floor_divide_ =
    foreign "atg_floor_divide_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_floor_divide_out =
    foreign
      "atg_floor_divide_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_floor_divide_scalar =
    foreign "atg_floor_divide_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_floor_divide_scalar_ =
    foreign "atg_floor_divide_scalar_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_floor_divide_scalar_out =
    foreign
      "atg_floor_divide_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_floor_out =
    foreign "atg_floor_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fmax = foreign "atg_fmax" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_fmax_out =
    foreign "atg_fmax_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fmin = foreign "atg_fmin" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_fmin_out =
    foreign "atg_fmin_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fmod = foreign "atg_fmod" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_fmod_ = foreign "atg_fmod_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_fmod_scalar_out =
    foreign
      "atg_fmod_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_fmod_tensor =
    foreign "atg_fmod_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fmod_tensor_ =
    foreign "atg_fmod_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fmod_tensor_out =
    foreign
      "atg_fmod_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_frac = foreign "atg_frac" (gc_tensor @-> returning raw_tensor)
  let stubs_frac_ = foreign "atg_frac_" (gc_tensor @-> returning raw_tensor)

  let stubs_frac_out =
    foreign "atg_frac_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fractional_max_pool2d =
    foreign
      "atg_fractional_max_pool2d"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_fractional_max_pool2d_backward =
    foreign
      "atg_fractional_max_pool2d_backward"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_fractional_max_pool2d_backward_grad_input =
    foreign
      "atg_fractional_max_pool2d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_fractional_max_pool2d_output =
    foreign
      "atg_fractional_max_pool2d_output"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_fractional_max_pool3d =
    foreign
      "atg_fractional_max_pool3d"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_fractional_max_pool3d_backward =
    foreign
      "atg_fractional_max_pool3d_backward"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_fractional_max_pool3d_backward_grad_input =
    foreign
      "atg_fractional_max_pool3d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_fractional_max_pool3d_output =
    foreign
      "atg_fractional_max_pool3d_output"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_frexp = foreign "atg_frexp" (ptr raw_tensor @-> gc_tensor @-> returning void)

  let stubs_frexp_tensor_out =
    foreign
      "atg_frexp_tensor_out"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs_frobenius_norm =
    foreign
      "atg_frobenius_norm"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_frobenius_norm_out =
    foreign
      "atg_frobenius_norm_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_from_file =
    foreign
      "atg_from_file"
      (string @-> int @-> int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_from_file_out =
    foreign
      "atg_from_file_out"
      (gc_tensor @-> string @-> int @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_full =
    foreign
      "atg_full"
      (ptr int64_t @-> int @-> scalar @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_full_like =
    foreign "atg_full_like" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_full_like_out =
    foreign
      "atg_full_like_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_full_out =
    foreign
      "atg_full_out"
      (gc_tensor @-> ptr int64_t @-> int @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_fused_moving_avg_obs_fake_quant =
    foreign
      "atg_fused_moving_avg_obs_fake_quant"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_gather =
    foreign
      "atg_gather"
      (gc_tensor @-> int64_t @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_gather_backward =
    foreign
      "atg_gather_backward"
      (gc_tensor @-> gc_tensor @-> int64_t @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;
end

module C2 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_gather_out =
    foreign
      "atg_gather_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_gcd = foreign "atg_gcd" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  let stubs_gcd_ = foreign "atg_gcd_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_gcd_out =
    foreign "atg_gcd_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ge = foreign "atg_ge" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_ge_ = foreign "atg_ge_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_ge_scalar_out =
    foreign
      "atg_ge_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_ge_tensor =
    foreign "atg_ge_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ge_tensor_ =
    foreign "atg_ge_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ge_tensor_out =
    foreign
      "atg_ge_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_gelu = foreign "atg_gelu" (gc_tensor @-> string @-> returning raw_tensor)
  let stubs_gelu_ = foreign "atg_gelu_" (gc_tensor @-> string @-> returning raw_tensor)

  let stubs_gelu_backward =
    foreign
      "atg_gelu_backward"
      (gc_tensor @-> gc_tensor @-> string @-> returning raw_tensor)
  ;;

  let stubs_gelu_backward_grad_input =
    foreign
      "atg_gelu_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> string @-> returning raw_tensor)
  ;;

  let stubs_gelu_out =
    foreign "atg_gelu_out" (gc_tensor @-> gc_tensor @-> string @-> returning raw_tensor)
  ;;

  let stubs_geometric =
    foreign "atg_geometric" (gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_geometric_ =
    foreign "atg_geometric_" (gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_geometric_out =
    foreign
      "atg_geometric_out"
      (gc_tensor @-> gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_geqrf = foreign "atg_geqrf" (ptr raw_tensor @-> gc_tensor @-> returning void)

  let stubs_geqrf_a =
    foreign
      "atg_geqrf_a"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs_ger = foreign "atg_ger" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_ger_out =
    foreign "atg_ger_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_glu = foreign "atg_glu" (gc_tensor @-> int64_t @-> returning raw_tensor)

  let stubs_glu_backward =
    foreign
      "atg_glu_backward"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_glu_backward_grad_input =
    foreign
      "atg_glu_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;
